[gd_scene load_steps=25 format=3 uid="uid://b6b53wcfk2drr"]

[ext_resource type="Script" path="res://src/map_viewer.gd" id="1_ir5ng"]
[ext_resource type="Script" path="res://src/main.gd" id="1_xrkms"]
[ext_resource type="Script" path="res://src/item_resource.gd" id="2_e3pet"]
[ext_resource type="PackedScene" uid="uid://cwwrdaodwfflq" path="res://src/map_item.tscn" id="3_tocgl"]
[ext_resource type="Theme" uid="uid://csk71hs7u21m7" path="res://src/main.tres" id="5_gj2nv"]
[ext_resource type="Resource" uid="uid://ecsbyoq54to2" path="res://src/radio_item.tres" id="5_qec41"]
[ext_resource type="PackedScene" uid="uid://5y8eobxaj1ni" path="res://src/me.tscn" id="6_gkdhv"]
[ext_resource type="Texture2D" uid="uid://s50psr2caa3a" path="res://assets/me.png" id="6_gphnu"]
[ext_resource type="Texture2D" uid="uid://dcqy2y7fgejgw" path="res://assets/money.png" id="6_vaiuu"]
[ext_resource type="Resource" uid="uid://btwod58nysvww" path="res://src/rtf_item.tres" id="7_fislk"]
[ext_resource type="Texture2D" uid="uid://2qw4an63i803" path="res://assets/me_button.png" id="7_p0buf"]
[ext_resource type="Resource" uid="uid://b6fcb0lwlx6ui" path="res://src/guk_item.tres" id="11_66elm"]

[sub_resource type="LabelSettings" id="LabelSettings_o6yxy"]
line_spacing = 1.0
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw232"]
content_margin_left = 10.0
bg_color = Color(0.82606, 0.82606, 0.82606, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5u4fy"]

[sub_resource type="LabelSettings" id="LabelSettings_1m65a"]
font_size = 45
font_color = Color(0.156664, 0.45497, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kh540"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fy8xv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vepog"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 5
border_color = Color(0.670689, 0.67069, 0.670689, 1)

[sub_resource type="Theme" id="Theme_nalyf"]
Button/colors/font_color = Color(0.108625, 0.35254, 1, 1)
Button/colors/font_focus_color = Color(0.162425, 0.16079, 1, 1)
Button/colors/font_hover_color = Color(0.0682144, 0.340827, 1, 1)
Button/colors/font_pressed_color = Color(0.000349622, 0.220608, 0.728277, 1)
Button/styles/focus = SubResource("StyleBoxEmpty_kh540")
Button/styles/hover = SubResource("StyleBoxEmpty_fy8xv")
Button/styles/normal = SubResource("StyleBoxEmpty_fy8xv")
Button/styles/pressed = SubResource("StyleBoxEmpty_kh540")
Label/styles/normal = SubResource("StyleBoxFlat_vepog")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_madnc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ius4b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_113vo"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(0.82179, 0.821788, 0.821789, 1)
border_width_left = 4
border_width_top = 2
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00b4m"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 2
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrkms")
itemreses = Array[ExtResource("2_e3pet")]([ExtResource("7_fislk"), ExtResource("11_66elm"), ExtResource("5_qec41")])

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Output" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
label_settings = SubResource("LabelSettings_o6yxy")

[node name="Output2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
label_settings = SubResource("LabelSettings_o6yxy")

[node name="Streetmap" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0.717647)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ir5ng")

[node name="MarginContainer" type="MarginContainer" parent="Streetmap"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Streetmap/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_gj2nv")

[node name="MarginContainer" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pw232")

[node name="Label" type="Label" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.00495516, 0.403914, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_5u4fy")
text = "0 лю"
label_settings = SubResource("LabelSettings_1m65a")

[node name="MarginContainer" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_vaiuu")

[node name="MarginContainer" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer2" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="Container" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
theme_override_constants/separation = 30
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_gj2nv")

[node name="VBoxContainer" type="VBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ZoomIn" type="Button" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_nalyf")
theme_override_colors/font_color = Color(0.225486, 0.201048, 1, 1)
theme_override_font_sizes/font_size = 100
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_madnc")

[node name="ZoomOut" type="Button" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_nalyf")
theme_override_colors/font_color = Color(0.225486, 0.201048, 1, 1)
theme_override_font_sizes/font_size = 100
text = "-"

[node name="GPS" type="Button" parent="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_ius4b")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_113vo")
theme_override_styles/hover = SubResource("StyleBoxFlat_00b4m")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_113vo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_113vo")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_00b4m")
theme_override_styles/normal = SubResource("StyleBoxFlat_00b4m")
icon = ExtResource("7_p0buf")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="PanelContainer" type="PanelContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("5_gj2nv")

[node name="MarginContainer" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5_gj2nv")
theme_override_font_sizes/font_size = 35
text = "лбл▓лЙлИ"

[node name="Label" type="Label" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_gj2nv")
theme_override_font_sizes/font_size = 65
text = "лЪлИЛѓлЙл╝ЛєЛІ"

[node name="MarginContainer" type="MarginContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ItemContainer" type="HBoxContainer" parent="Streetmap/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MapItems" type="Node2D" parent="."]

[node name="Me" parent="MapItems" instance=ExtResource("6_gkdhv")]
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_gphnu")

[node name="RTF" parent="MapItems" instance=ExtResource("3_tocgl")]
lonlat = Vector2(60.6507, 56.8407)
item_resource = ExtResource("7_fislk")

[node name="GUK" parent="MapItems" instance=ExtResource("3_tocgl")]
lonlat = Vector2(60.6541, 56.8441)
item_resource = ExtResource("11_66elm")

[node name="RADIO" parent="MapItems" instance=ExtResource("3_tocgl")]
lonlat = Vector2(60.6077, 56.8395)
item_resource = ExtResource("5_qec41")

[connection signal="zoom_in" from="Streetmap" to="." method="_on_streetmap_zoom_in"]
[connection signal="zoom_out" from="Streetmap" to="." method="_on_streetmap_zoom_out"]
[connection signal="pressed" from="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/ZoomIn" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/ZoomOut" to="." method="_on_zoom_out_pressed"]
[connection signal="pressed" from="Streetmap/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer/GPS" to="." method="_on_gps_pressed"]
